Jenkins/topic1/Kubernetes/Kubectl/jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: http
      targetPort: 8080
    - port: 50000
      name: jnlp
      targetPort: 50000

  selector:
    app: jenkins
